# baraddur

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  justfile
.claude/skills/governance-check/: SKILL.md
docs/: governance.md  ux-design.md
docs/plans/: phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-browse-mode.md  project-plan.md  ux-design.md
src/: lib.rs  main.rs
src/config/: discovery.rs  mod.rs  schema.rs  validate.rs
src/output/: display.rs  mod.rs  style.rs
src/pipeline/: mod.rs  runner.rs  step.rs
src/watcher/: mod.rs
tests/: config_load.rs  runner.rs
